--- a/agnocast_kmod/debian/changelog
+++ b/agnocast_kmod/debian/changelog
@@ -1,3 +1,50 @@
+agnocast-kmod-v2.2.0 (2.2.0-6) noble; urgency=medium
+
+  * fix(kmod)[need-minor-update]: delete unnecessary tests along with the abolish of `MAX_PROCESS_NUM_PER_MEMPOOL` (#1073 <https://github.com/tier4/agnocast/issues/1073>)
+  * fix(agnocastlib): add warning about `mempool_size_gb` (#1069 <https://github.com/tier4/agnocast/issues/1069>)
+  * feat(kmod)[need-minor-update]: increase MAX_PUBLISHER_NUM (#1060 <https://github.com/tier4/agnocast/issues/1060>)
+  * feat(kmod)[need-minor-update]: abolish MAX_PROCESS_NUM_PER_MEMPOOL (#1056 <https://github.com/tier4/agnocast/issues/1056>)
+  * refactor(kmod)[need-minor-update]: fine-grained locking to abolish global_mutex (#1053 <https://github.com/tier4/agnocast/issues/1053>)
+  * fix(kmod)[need-minor-update]: increase `MEMPOOL_NUM` (#1061 <https://github.com/tier4/agnocast/issues/1061>)
+  * refactor(kmod)[need-minor-update]: rename ioctl corresponding functions to ioctl_ prefixed. (#1052 <https://github.com/tier4/agnocast/issues/1052>)
+  * feat(kmod): Increase MAX_SUBSCRIBER_NUM by using bitmap (#1015 <https://github.com/tier4/agnocast/issues/1015>)
+  * feat(agnocastlib): add kunit test for add refcount (#1046 <https://github.com/tier4/agnocast/issues/1046>)
+  * fix(agnocastlib): avoid use_after_free bug for `allow_same_message=true` (#1045 <https://github.com/tier4/agnocast/issues/1045>)
+  * refactor(kmod): reduce kernel module log verbosity by converting non-essential messages to dev_dbg (#1009 <https://github.com/tier4/agnocast/issues/1009>)
+  * feat[needs minor version update]: redesign ipc_shared_ptr (#966 <https://github.com/tier4/agnocast/issues/966>)
+  * refactor(agnocastlib)[need-minor-update]: reduce lock scope of global mutex in kmod (#985 <https://github.com/tier4/agnocast/issues/985>)
+  * refactor(agnocastlib)[needs minor version update]: add debug mode for bridge (#963 <https://github.com/tier4/agnocast/issues/963>)
+  * feat(agnocastlib)[need-minor-update]: add get_intra_subscription_count api (#934 <https://github.com/tier4/agnocast/issues/934>)
+  * feat[needs minor version update]: remove QoS depth limit (#937 <https://github.com/tier4/agnocast/issues/937>)
+  * feat(kmod): add is_bridge in info (#930 <https://github.com/tier4/agnocast/issues/930>)
+  * fix(kmod)[needs major version update]: get_publisher/subscriber_num to return whether bridge exist (#922 <https://github.com/tier4/agnocast/issues/922>)
+  * feat(kmod): add set_ros2_subscriber_num ioctl command (#920 <https://github.com/tier4/agnocast/issues/920>)
+  * feat(kmod)[needs minor version update]: get process num (#902 <https://github.com/tier4/agnocast/issues/902>)
+  * refactor(kmod): removed excessive dmesg  (#877 <https://github.com/tier4/agnocast/issues/877>)
+  * feat(agnocastlib): add check_managed_bridges (#860 <https://github.com/tier4/agnocast/issues/860>)
+  * refactor(kmod): move deb_info (#858 <https://github.com/tier4/agnocast/issues/858>)
+  * feat(kmod)[needs minor version update]: remove publisher cmd (#844 <https://github.com/tier4/agnocast/issues/844>)
+  * feat(kmod)[needs minor version update]: remove subscriber cmd (#838 <https://github.com/tier4/agnocast/issues/838>)
+  * test(kmod)[needs minor version update]: get publisher num cmd (#834 <https://github.com/tier4/agnocast/issues/834>)
+  * feat(kmod)[needs minor version update]: get publisher num cmd (#831 <https://github.com/tier4/agnocast/issues/831>)
+  * test(kmod)[needs minor version update]: remove bridge ioctl (#827 <https://github.com/tier4/agnocast/issues/827>)
+  * refactor(kmod): add blank line (#830 <https://github.com/tier4/agnocast/issues/830>)
+  * feat(kmod)[needs minor version update]: remove bridge ioctl  (#824 <https://github.com/tier4/agnocast/issues/824>)
+  * test(kmod) [needs minor version update]: add bridge ioctl (#816 <https://github.com/tier4/agnocast/issues/816>)
+  * feat(kmod)[needs minor version update]: add bridge ioctl (#812 <https://github.com/tier4/agnocast/issues/812>)
+  * test(kmod) [needs minor version update]: get publisher qos ioctl (#808 <https://github.com/tier4/agnocast/issues/808>)
+  * feat(kmod) [needs minor version update]: add get publisher qos ioctl (#807 <https://github.com/tier4/agnocast/issues/807>)
+  * test(kmod) [needs minor version update]: get subscription qos ioctl (#806 <https://github.com/tier4/agnocast/issues/806>)
+  * feat(kmod) [needs minor version update]: add get subscription qos ioctl (#804 <https://github.com/tier4/agnocast/issues/804>)
+  * test(kmod)[needs minor version update]: ignore_local_publications_for_agnocast_sub (#786 <https://github.com/tier4/agnocast/issues/786>)
+  * feat(kmod)[needs minor version update]: add_ignore_local_publications_for_agnocast_sub (#783 <https://github.com/tier4/agnocast/issues/783>)
+  * feat(kmod) [needs minor version update]: add reliability field to subscriber_info (#775 <https://github.com/tier4/agnocast/issues/775>)
+  * fix(kmod) [needs minor version update]: Remove AGNOCAST_MEMPOOL_SIZE (#719 <https://github.com/tier4/agnocast/issues/719>)
+  * fix(kmod): add node name log for  insert_publisher/subscriber_info (#704 <https://github.com/tier4/agnocast/issues/704>)
+  * fix(kmod): perform cleanup for initializations that were completed when fails in agnocast_init (#703 <https://github.com/tier4/agnocast/issues/703>)
+
+ -- Takahiro Ishikawa-Aso <sykwer@gmail.com>  Thu, 19 Feb 2026 2:18:00 +0900
+
 agnocast-kmod-v2.1.2 (2.1.2-1) jammy; urgency=medium
 
   * refactor(kmod): allocate memory for the name buffers using kmalloc (#641 <https://github.com/tier4/agnocast/issues/641>)
